# primeiro-projeto-ml

./: README.md  app.py  pyproject.toml  testes.ipynb
